--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				    </div>
 
 				    <div class="image-container">
-				    	<img class="demo" src="assets/Vigan.jpg" alt="sample" class="samplepic">
+				    	<img class="demo" src="assets/vigan.jpg" alt="sample" class="samplepic">
 				    	<div class="overlay">
 				    		<h1 class="title-overlay">Vigan City</h1>
 				    		<p class="desc-overlay">Well-preserved Spanish colonial architecture and charming cobblestone streets.</p>
