--- a/view-more.html
+++ b/view-more.html
@@ -99,7 +99,7 @@
 			<img class="boracay1" src="assets/BORACAY.png" alt="Boracay">
 			<div class="card-container">
 				<h4><b>Boracay</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>Famous for its white sandy beaches, crystal-clear waters, and vibrant nightlife.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -130,7 +130,7 @@
 			<img class="elnido2" src="assets/ELNIDO.webp" alt="El Nido">
 			<div class="card-container">
 				<h4><b>El Nido</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>Known for stunning limestone cliffs, turquoise waters, and island-hopping adventures.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -161,7 +161,7 @@
 			<img class="bohol-3" src="assets/bohol-1.jpg" alt="Bohol">
 			<div class="card-container">
 				<h4><b>Bohol</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>Home to the Chocolate Hills, tarsiers, and pristine beaches.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -192,7 +192,7 @@
 			<img class="rizal" src="assets/rizal.jpg" alt="Rizal Park">
 			<div class="card-container">
 				<h4><b>Rizal Park</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>A historic urban park in Manila honoring national hero José Rizal.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -223,7 +223,7 @@
 			<img class="mayon-2" src="assets/mayon-2.jpg" alt="Mayon-2">
 			<div class="card-container">
 				<h4><b>Mayon Volcano</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>A perfect cone-shaped volcano in Albay, known for its beauty and eruptions.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -254,7 +254,7 @@
 			<img class="nacpan" src="assets/nacpan.jpg" alt="Nacpan Palawan">
 			<div class="card-container">
 				<h4><b>Nacpan Palawan</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>A serene beach with golden sand and clear waters near El Nido.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -285,7 +285,7 @@
 			<img class="intramuros" src="assets/intramuros.jpg" alt="Intramuros">
 			<div class="card-container">
 				<h4><b>Intramuros</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>Manila’s historic walled city with Spanish-era landmarks.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -316,7 +316,7 @@
 			<img class="vigan" src="assets/vigan.jpg" alt="Vigan City">
 			<div class="card-container">
 				<h4><b>Vigan City</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p> A UNESCO Heritage site with well-preserved Spanish colonial architecture.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
@@ -347,7 +347,7 @@
 			<img class="baguio" src="assets/baguio.jpg" alt="Baguio City">
 			<div class="card-container">
 				<h4><b>Baguio City</b></h4>
-				<p>Crystal clear waters and white sandy beaches.</p>
+				<p>The “Summer Capital of the Philippines,” known for its cool climate and scenic views.</p>
 				<div class="card-details">
 					<div class="price">
 						<p>From</p>
